--- a/template.yaml
+++ b/template.yaml
@@ -8,6 +8,9 @@ Parameters:
     Default: ""
     MaxLength: 10
 
+  FunctionName:
+    Type: String
+
 Resources:
 
   LambdaRole:
@@ -31,3 +34,19 @@ Resources:
                 Action:
                   - "cloudwatch:PutMetricData"
                 Resource: "*"
+
+  Lamda:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: !Sub
+        - "${Environment}${Name}Lambda"
+        - Environment: !Ref Env
+          Name: !Ref FunctionName
+      Runtime: "python3.6"
+      Handler: "index.handler"
+      Role: !GetAtt LambdaRole.Arn
+      Timeout: 30
+      Code:
+        ZipFile: |
+          def handler(event, context):
+              print("Hello Bros!")
