--- a/template-2.yaml
+++ b/template-2.yaml
@@ -23,7 +23,7 @@ Resources:
       Runtime: "python3.6"
       Handler: "index.handler"
       Role:
-        Fn::ImportValue: !Sub "${Env}-demo-cfn-lambda-role-arn"
+        Fn::ImportValue: !Sub "${Env}-demo-cfn-lambda-role-arn" # <-------------- Importing the lambda role ARN
       Timeout: 30
       Code:
         ZipFile: |
